Wed Oct 11 11:16:34 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: applied cleanup patch from Mikhail Zabaluev
	  which should finish fixing #337486

Wed Oct 11 09:55:06 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/security.c: applied fix from Shane Corgatelli to pass
	  the full URL when checking security access for network URLs,
	  should fix bug #359366

Mon Aug 21 10:46:25 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* doc/xslt.html python/tests/pyxsltproc.py xsltproc/xsltproc.c: 
	  applied patch from Daniel Leidert to fix some typo
	* xsltproc.xml xsltproc.1: applied another patch from Daniel Leidert
	  and regenerated

Wed Aug 16 17:39:04 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: --xinclude should also force XInclude
	  processing on the stylesheets themselves, raised by Daniel Leidert

Thu Aug 10 15:54:02 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/transform.c libxslt/variables.c
	  libxslt/xsltInternals.h: Fixed restoring the context doc
	  for XPath in xsltForEach(). Eliminated the use of @tmpDoc
	  of the transformation context.

Thu Aug 10 13:40:35 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/preproc.c: Added missing QName-validation of some
	  attributes of XSLT-elements. This fixes bug #304921, reported
	  by Frans Englich.

Thu Aug 10 13:27:48 CEST 2006 Kasimier Buchcik <libxml2-cvs@cazic.net>

	* libxslt/transform.c: As suggested by Bill, I changed
	  xsltShallowCopyNsNode() to return an xmlNsPtr instead of
	  an int. The fix of bug #350085 is OK; i.e. the removal
	  of the call to xsltFreeRVTs() in
	  xsltApplyStylesheetInternal(). I think I tried to clear
	  the transformation context as much as possible, in case
	  it is reused; Daniel informed me on the list that reusing
	  the context is not intended, so no need anymore to try
	  to free the fragments immediately after the transformation.
