@@ -23,14 +23,14 @@ extern "C" {
 /**
  * LIBEXSLT_VERSION:
  *
- * the version number: 1.2.3 value is 1002003
+ * the version number: 1.2.3 value is 10203
  */
 #define LIBEXSLT_VERSION @LIBEXSLT_VERSION_NUMBER@
 
 /**
  * LIBEXSLT_VERSION_STRING:
  *
- * the version number string, 1.2.3 value is "1002003"
+ * the version number string, 1.2.3 value is "10203"
  */
 #define LIBEXSLT_VERSION_STRING "@LIBEXSLT_VERSION_NUMBER@"
 
